<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.vkyoung.myitems.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f9fddd"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
        android:id="@+id/items_total"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_total_items_num01"    />

        <TextView
        android:id="@+id/category_total"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_total_locations_num01"  />

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="2dp"
            android:layout_height="2dp"
            android:background="#ffffffff"  />

        <TextView
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/show_all_items" />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style = "?android:attr/buttonBarStyle" >

            <Button
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/show_by_category"
                style = "?android:attr/buttonBarButtonStyle"/>

            <Button
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/show_by_location"
                style = "?android:attr/buttonBarButtonStyle"/>

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/manage_location"
                />

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/manage_category"
                />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="2dp"
            android:layout_height="2dp"
            android:background="#ffffffff"  />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/search_items"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/search_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="#eafffb"
                android:hint="@string/input_here"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/search_go_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/search_go" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/item_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

</LinearLayout>
