<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/cardview_default_elevation"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    app:cardElevation="@dimen/cardview_default_elevation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="4dp">

        <TextView
            android:id="@+id/title_slc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/next_level"
            android:layout_marginTop="4dp"
            android:text="@string/default_location_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/description_slc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/title_slc"
            android:layout_toStartOf="@+id/next_level"
            android:text="@string/defaultDescription" />


        <TextView
            android:id="@+id/next_level"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_toStartOf="@+id/make_selection"
            android:background="#ffFF5511"
            android:textColor="@color/fullyWhite"
            android:text="@string/next_location"
            android:textSize="14sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/make_selection"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:background="#FF11FFFF"
            android:textColor="#000000"
            android:text="@string/make_selection"
            android:textSize="14sp"
            android:gravity="center"
            />


    </RelativeLayout>


</android.support.v7.widget.CardView>

