<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fullyWhite"
    tools:context="cn.vkyoung.myitems.NewItemActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/m_toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:titleTextColor="@color/fullyWhite"
        android:subtitleTextColor="@color/fullyWhite"
        android:elevation="4dp"

        />    <!--android:theme="@style/ThemeOverlay.AppCompat.ActionBar" -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <ImageView
            android:id="@+id/main_image"
            android:layout_width="320dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_add_a_photo_black_48dp"
            android:scaleType="center"
            android:background="#e0e0e0"
            android:onClick="addMainImage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/add_extra_images"
            android:textSize="16sp"
            android:textColor="#FF333333"
            android:layout_gravity="end|bottom"
            android:alpha="1"
            android:onClick="addExtraImages"/>
    </FrameLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FF353535"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Item_name"
                android:textSize="20sp"
                android:gravity="center"
                />
            <EditText
                android:id="@+id/new_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                />
        </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Item_description"
                android:textSize="20sp"
                android:gravity="center"
                />
            <EditText
                android:id="@+id/new_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                />
        </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FF353535"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/loc_deg_lay_ItemNew"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:onClick="selectLocation">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_edit_location_black_24dp"
                android:scaleType="center"/>
            <TextView
                android:id="@+id/loc_deg_tv_ItemNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/loc_no_designate"
                android:lines="2"
                android:maxLines="2"
                />


        </LinearLayout>
        <LinearLayout
            android:id="@+id/cat_deg_lay_ItemNew"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:onClick="selectCategory">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_class_black_24dp"
                android:scaleType="center"/>
            <TextView
                android:id="@+id/cat_deg_tv_ItemNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/cat_no_designate"
                android:lines="2"
                android:maxLines="2"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FF353535"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setSpecialState"/>
            <Spinner
                android:id="@+id/drop_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/drop_status">


            </Spinner>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="4dp"
            android:background="#64ffda"
            android:onClick="addSingleItem">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="4dp"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_black_36dp"
                />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textColor="#424242"
                android:textSize="24sp"/>

        </LinearLayout>

        </FrameLayout>


    </FrameLayout>

</LinearLayout>
