<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fullyWhite"
    tools:context="cn.vkyoung.myitems.NewItemActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/m_toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:titleTextColor="@color/fullyWhite"
        android:subtitleTextColor="@color/fullyWhite"
        android:elevation="4dp"

        />    <!--android:theme="@style/ThemeOverlay.AppCompat.ActionBar" -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <ImageView
            android:id="@+id/main_image_item_detail"
            android:layout_width="320dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_add_a_photo_black_48dp"
            android:scaleType="center"
            android:background="#e0e0e0"
            />

        <TextView
            android:id="@+id/dropped_shw_single_item"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/dropped"
            android:textColor="#d50000"
            android:textSize="18sp"
            android:layout_gravity="end|top"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/show_extra_images"
            android:textSize="16sp"
            android:textColor="#FF333333"
            android:layout_gravity="end|bottom"
            android:alpha="1"
            android:onClick="showExtraImages"/>
    </FrameLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FF353535"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Item_name"
            android:textSize="20sp"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/detail_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Item_description"
            android:textSize="20sp"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/detail_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FF353535"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/loc_shw_lay_ItemDetail"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:onClick="selectLocation">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_edit_location_black_24dp"
                android:scaleType="center"/>
            <TextView
                android:id="@+id/loc_shw_tv_ItemDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/loc_no_designate"
                android:lines="2"
                android:maxLines="2"
                />


        </LinearLayout>
        <LinearLayout
            android:id="@+id/cat_shw_lay_ItemDetail"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:onClick="selectCategory">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_class_black_24dp"
                android:scaleType="center"/>
            <TextView
                android:id="@+id/cat_shw_tv_ItemDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/cat_no_designate"
                android:lines="2"
                android:maxLines="2"/>

        </LinearLayout>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:background="#FF353535"/>

        <FrameLayout
            android:id="@+id/frame_new_item_succeed"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="24dp"
            android:background="#64ffda"


            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_check_circle_black_48dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_succeed"
                    android:textColor="#424242"
                    android:textSize="28sp"/>

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <FrameLayout
            android:id="@+id/frame_modifySingleItem"
            android:layout_width="wrap_content"
                android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/deleteSingleItem"
            android:layout_margin="4dp"
            android:background="#fdd835"
            android:onClick="modifySingleItem">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="2dp"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_mode_edit_black_36dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modify"
                    android:textColor="#424242"
                    android:textSize="24sp"/>

            </LinearLayout>

        </FrameLayout>

            <FrameLayout
            android:id="@+id/deleteSingleItem"
            android:layout_width="wrap_content"
                android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="#f44336"
            android:onClick="deleteSingleItem">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="2dp"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_delete_forever_black_36dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:textColor="#424242"
                    android:textSize="24sp"/>

            </LinearLayout>

        </FrameLayout>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
